--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "@vitejs/plugin-react": "^4.5.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
+    "happy-dom": "^18.0.1",
     "jsdom": "^26.1.0",
     "tailwindcss": "^4",
+    "tsx": "^4.20.3",
     "typescript": "^5",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.1.4"
