--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
-    "next": "15.3.2",
+    "next": "^15.3.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
